--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Cars#index</h1>
-<p>Find me in app/views/cars/index.html.erb</p>
+<%# Display all the cars with their brand and model %>
+<% @cars.each do |car| %>
+  <h2><%= car.brand %></h2>
+  <h3><%= car.model %></h3>
+  <p><%= car.created_at.strftime("%a %b %e at %l%M %p") %></p>
+  <div><%= car.owner.nickname %></div>
+  <%= link_to "More details", car_path(car) %>
+<% end %>
