--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,2 +1,25 @@
-<h1>Cars#show</h1>
-<p>Find me in app/views/cars/show.html.erb</p>
+<h2><%= @car.brand %></h2>
+<h3><%= @car.model %></h3>
+<p><%= @car.fuel %></p>
+<p><%= @car.year %></p>
+
+<div>
+  <%= simple_form_for [@car, @review] do |f| %>
+    <%= f.input :comment, label: false, placeholder: "Coment here..." %>
+    <%= f.input :rating, collection: 0..5, label: false %>
+    <%= f.submit 'Add review' %>
+  <% end %>
+</div>
+
+<% @car.reviews.each do |review| %>
+  <p><%= review.comment %></p>
+  <p><%= '⭐️' * review.rating %></p>
+<% end %>
+
+<% if @car.favourites.empty? %>
+  <%= simple_form_for [@car, @favourite] do |f| %>
+    <%= f.submit 'Save to my Garage' %>
+  <% end %>
+<% else %>
+  <p>This car is in your garage!</p>
+<% end %>
